# bevy-painter

./: Cargo.toml  flake.nix
assets/shaders/: triplanar_extension.wgsl
examples/: integration_test.rs  integration_test_2_colors.rs  integration_test_4_colors.rs  minimal_cube.rs  painted_sculpture.rs  painter.rs  simple_terrain.rs
src/: lib.rs  material_field.rs  plugin.rs
src/material/: extension.rs  mod.rs  systems.rs
src/material/shaders/: triplanar_extension.wgsl
src/material_field/: blending.rs  brushes.rs  field.rs  meshing.rs  mod.rs  neighbor.rs
src/mesh/: attributes.rs  builder.rs  mod.rs  vertex_data.rs
src/palette/: asset.rs  builder.rs  mod.rs  properties.rs  validation.rs
