[package]
name = "bevy-painter"
version = "0.1.0"
edition = "2024"
description = "Triplanar mapping with multi-material blending for voxel meshes"
keywords = ["bevy", "voxel", "triplanar", "terrain", "material"]
categories = ["game-development", "rendering::graphics-api"]

[features]
default = []
debug_viz = []
material_field = []

[dependencies]
bevy = { version = "0.17", default-features = true, features = [
    "bevy_asset",
    "bevy_render",
    "bevy_pbr",
    "bevy_core_pipeline",
    "basis-universal",
    "ktx2",
]}
bytemuck = "1.24.0"
thiserror = "2"

[dev-dependencies]
bevy-sculpter = "0.1"
chunky-bevy = "0.2"

[[example]]
name = "painted_sculpture"
required-features = ["material_field"]
