[package]
name = "bevy-painter"
version = "0.1.0"
edition = "2024"
description = "Triplanar mapping with multi-material blending for voxel meshes"
keywords = ["bevy", "voxel", "triplanar", "terrain", "material"]
categories = ["game-development", "rendering::graphics-api"]

[features]
default = ["material_field"]
debug_viz = []
material_field = ["bevy-sculpter", "chunky-bevy"]

[dependencies]
bevy = { version = "0.17", default-features = true, features = [
    "bevy_asset",
    "bevy_render",
    "bevy_pbr",
    "bevy_core_pipeline",
    "basis-universal",
    "ktx2",
]}
bytemuck = "1.24.0"
thiserror = "2"
#bevy-sculpter = {version = "0.1", optional = true}
bevy-sculpter = {git = "https://github.com/ChousX/bevy-sculpter.git", optional = true}

chunky-bevy = {version = "0.2", optional = true}
